# KoopmanGraph

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  paper.bib  paper.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  draft-pdf.yml  release.yml
data/cylinder_wake/: wake.pt
data/ieee118/: topology.pt
data/metr_la/: traffic.pt
docs/: Makefile  koopmangraph_v0.4.0_design_doc.md  make.bat
docs/source/: api.rst  architecture.rst  capabilities.rst  conf.py  faq.rst  index.rst  installation.rst  quickstart.rst  tutorials.rst
examples/: 01_synthetic_graph.ipynb  02_ieee118_bus.ipynb  03_traffic_network.ipynb  04_grid_attention.ipynb  05_custom_data.ipynb  06_epidemic_ring.ipynb  07_koopman_spectrum.ipynb  08_loss_stability.ipynb  09_topology_ablation.ipynb  10_advanced_training.ipynb  11_long_horizon_stability.ipynb  12_irregular_sampling_continuous_time.ipynb  13_online_adaptation_topology_shock.ipynb  13_online_adaptation_traffic_drift.ipynb  14_physics_informed_advection.ipynb  14_physics_informed_diffusion.ipynb  15_closed_loop_voltage_control_rl.ipynb  16_spectral_similarity_anomalies.ipynb  17_delay_embedding_partial_observability.ipynb  18_networked_koopman_dynamic_topology.ipynb  19_bilinear_control_koopman.ipynb  20_continuous_spectrum_auxiliary_network.ipynb  21_uncertainty_quantification.ipynb  22_gnn_forecaster_comparison.ipynb  23_hierarchical_multiresolution.ipynb  24_chaotic_pde_benchmarks.ipynb  24_nonlinear_chaotic_benchmarks.ipynb  25_kalman_koopman_state_estimation.ipynb  26_sparse_interpretable_operator.ipynb
scripts/: build_cylinder_wake_cache.py  download_ieee118.py  download_metr_la.py
src/koopman_graph/: __init__.py  adaptation.py  analysis.py  baselines.py  continuous.py  data.py  decoder.py  encoder.py  env.py  graph_utils.py  losses.py  metrics.py  model.py  observables.py  operator.py  protocols.py  serialization.py  spectrum_types.py  training.py
src/koopman_graph/adaptation/: __init__.py  impute.py  kalman.py  observer.py  rls.py
src/koopman_graph/analysis/: __init__.py  anomaly.py  plotting.py  similarity.py  spectrum.py
src/koopman_graph/baselines/: __init__.py  base.py  dmd.py  dmdc.py  edmd.py
src/koopman_graph/baselines/gnn/: __init__.py  base.py  dcrnn.py  stgcn.py  wavenet.py
src/koopman_graph/data/: __init__.py  construction.py  containers.py  delay_windows.py  rollout.py  sampling.py  splits.py  trajectories.py  validation.py
src/koopman_graph/datasets/: __init__.py  cylinder_wake.py  dynamics.py  epidemic.py  grid.py  ieee118.py  kuramoto_sivashinsky.py  lorenz96.py  metr_la.py  nonlinear.py  synthetic.py  topology.py
src/koopman_graph/graph_utils/: __init__.py  propagation.py  topology.py
src/koopman_graph/hierarchical/: __init__.py  model.py  pooling.py
src/koopman_graph/losses/: __init__.py  consistency.py  physics.py  reconstruction.py  regularization.py  rollout.py
src/koopman_graph/model/: __init__.py  encoding.py  estimator.py  factory.py  inference.py  online_adaptation.py  timing.py  validation.py
src/koopman_graph/nn/: __init__.py  decoder.py  delay.py  encoder.py  gnn.py
src/koopman_graph/operators/: __init__.py  auxiliary_spectral.py  continuous.py  continuous_parameterizations.py  continuous_propagation.py  continuous_van_loan.py  contract.py  control.py  discrete.py  discrete_parameterizations.py  discrete_propagation.py  graph.py
src/koopman_graph/training/: __init__.py  device.py  epochs.py  extra_objectives.py  history.py  inputs.py  loop.py  objectives.py  pair_objectives.py  schedules.py
src/koopman_graph/uq/: __init__.py  common.py  ensemble.py  latent_gaussian.py
tests/: conftest.py  test_adaptation.py  test_analysis.py  test_baselines.py  test_continuous.py  test_control.py  test_coverage_gaps.py  test_data.py  test_datasets.py  test_decoder.py  test_delay_embedding.py  test_docs.py  test_dynamics.py  test_encoder.py  test_env.py  test_gnn_baselines.py  test_graph_operator.py  test_graph_utils.py  test_hierarchical.py  test_ieee118.py  test_losses.py  test_metr_la_cache.py  test_metrics.py  test_model.py  test_observables.py  test_operator.py  test_package.py  test_plotting.py  test_protocols.py  test_serialization.py  test_training.py  test_uq.py
