[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koopman-graph"
dynamic = ["version"]
description = "Topology-aware Koopman autoencoders for forecasting and analyzing networked dynamics"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Travis Kessler", email = "travis.j.kessler@gmail.com" },
]
keywords = [
    "koopman",
    "graph-neural-networks",
    "pytorch-geometric",
    "spatiotemporal",
    "topological",
    "dynamics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.15.0",
    "pre-commit>=4.0.0",
    "nbmake>=0.5.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "ipykernel>=6.29.0",
    "pandas>=2.0.0",
    "gymnasium>=1.0.0",
]
docs = [
    "sphinx>=8.0.0",
    "furo>=2024.8.6",
    "sphinx-copybutton>=0.5.2",
]
rl = [
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/tjkessler/KoopmanGraph"
Documentation = "https://koopmangraph.readthedocs.io/"
Repository = "https://github.com/tjkessler/KoopmanGraph"
Issues = "https://github.com/tjkessler/KoopmanGraph/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "koopman_graph.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "ignore::tqdm.std.TqdmWarning",
]

[tool.coverage.run]
source = ["koopman_graph"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# uv defaults to official CPU wheels (matches CI). For CUDA / ROCm / XPU, use
# `uv pip install torch --torch-backend=auto` (or a specific backend) and see
# https://docs.astral.sh/uv/guides/integration/pytorch/ — or override sources.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
